2003-01-05  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.0.12.

        * Diff.jsp did not use the templateDir property correctly.  Oops.
        Reported by Steven Noels, I think.

        * Added Expires, Last-Modified, and Cache-Control headers to
        Edit.jsp responses - this should allow certain versions of
        Internet Explorer to use Preview correctly.  Suggested by Richard
        Donkin.

        * Implemented page "locking".  When you now start to edit a page,
        the page is marked as being under editing, and the next guy will
        get a warning about that.  To facilitate this, Edit.jsp was
        changed.  Also, check out the new tags in "EditTemplate.jsp", and
        note also that the "Cancel" is now a button instead of a link.
        Suggested by Olli Lounela.

2003-01-03  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * Wrote some new documentation into sample wikipages.

        * v2.0.11.

        * All boolean type properties in jspwiki.properties recognize now
        "on" and "yes" as "true" as well.

        * It is now possible to allow raw HTML on WikiPages.  Beware, this
        is a very dangerous option, since it will allow people OTHER THAN
        THE ADMINISTRATOR to make wikis that can hurt users.  Requested
        (very loudly and many times :-) by Alain Ravet.

        * v2.0.10.

        * WeblogPlugin changed entry formats.  Beware, if you've been
        using it so far. 

        * WikiPage now implements Cloneable.  I have no idea why.

2002-12-29  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.0.9.

        * Added permalinks to WeblogPlugin.

        * IndexPlugin enhanced to have parameters "include" and "exclude",
        which can be used to include or exclude pages using standard glob
        wild card expressions (*, ?, etc).

2002-12-28  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.0.8.
